--- a/introducao/index.html
+++ b/introducao/index.html
@@ -74,7 +74,7 @@
 						<pre>Mostrar gráfico</pre>
 					</section>
 					<section>
-						<p class="fragment">
+						<p>
 							Muitas linguagens acabam criando dependências e amarrações com o <span class="teal">ambiente</span> que estão instaladas.
 						</p>
 						<p class="fragment">
@@ -82,7 +82,7 @@
 						</p>
 					</section>
 					<section>
-						<p class="fragment">
+						<p>
 							Existem muitos softwares para gerência de <span class="teal">ambientes</span>.
 						</p>
 						<p class="fragment">
@@ -97,10 +97,38 @@
 					<img src="img/superwhale_001.png" alt="" class="clear">
 					<h4><span class="blue">Docker</span>!</h4>
 				</section>
-				<section>
+				<section id="what-is">
 					<p>
-						
+						<span class="blue">Docker</span> é a plataforma para criação e gerência de <span class="fuchsia">containers</span>.
 					</p>
+					<img src="img/Container-PNG-HD.png" alt="" class="clear">
+				</section>
+				<section id="about-container">
+					<section>
+						<p>
+							<span class="fuchsia">Containers</span> são subsistemas isolados, que rodam em cima do S.O compatilhando recursos em comum.
+						</p>
+						<img src="img/normal_ian-symbol-freight-cargo-ship-1.png" alt="" class="clear" style="height: 300px">
+					</section>
+					<section>
+							<img src="img/Container@2x.png" alt="" class="clear" style="height: 300px">
+					</section>
+				</section>
+				<section id="what-i-can-do">
+					<section>
+						<p>Com <span class="fuchsia">containers</span> ganhamos algumas facilidades...</p>
+					</section>
+					<section 
+						data-background-video="videos/containers.mp4" 
+						data-background-video-loop="loop" 
+						data-background-color="#000000">
+					</section>
+					<section 
+						data-background-video="videos/fire.mp4" 
+						data-background-video-loop="loop" 
+						data-background-color="#000000">
+					</section>
+				
 				</section>
 			</div>
 		</div>
