work in progress

--- a/introducao/index.html
+++ b/introducao/index.html
@@ -122,13 +122,20 @@
 						data-background-video="videos/containers.mp4" 
 						data-background-video-loop="loop" 
 						data-background-color="#000000">
+						<h4>Podemos transportar nossa aplicação junto com o ambiente (daí o conceito de container hehehe)</h4>
 					</section>
 					<section 
 						data-background-video="videos/fire.mp4" 
 						data-background-video-loop="loop" 
 						data-background-color="#000000">
+						<h4>Podemos atear fogo nele também!</h4>
 					</section>
-				
+				</section>
+				<section id="are-stateless">
+					<h4><span class="fuchsia">Containers</span> são stateless!</h4>
+					<p class="fragment">
+						Podem ser destruidos, desmontados, recriados... E muito rapidamente!
+					</p>
 				</section>
 			</div>
 		</div>
