--- a/introducao/index.html
+++ b/introducao/index.html
@@ -6,15 +6,15 @@
 
 		<title>Workshop Docker - Introdução</title>
 
-		<link rel="stylesheet" href="/node_modules/reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="/node_modules/reveal.js/css/theme/night.css">
-		<link rel="stylesheet" href="/css/colors.css">
-		<link rel="stylesheet" href="/css/styles.css">
+		<link rel="stylesheet" href="node_modules/reveal.js/css/reveal.css">
+		<link rel="stylesheet" href="node_modules/reveal.js/css/theme/night.css">
+		<link rel="stylesheet" href="css/colors.css">
+		<link rel="stylesheet" href="css/styles.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="/css/paraiso-dark.css">
+		<link rel="stylesheet" href="css/paraiso-dark.css">
 
-		<link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -233,8 +233,8 @@
 			</div>
 		</div>
 
-		<script src="/node_modules/reveal.js/lib/js/head.min.js"></script>
-		<script src="/node_modules/reveal.js/js/reveal.js"></script>
+		<script src="node_modules/reveal.js/lib/js/head.min.js"></script>
+		<script src="node_modules/reveal.js/js/reveal.js"></script>
 
 		<script>
 			// More info about config & dependencies:
